# PageCase

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  run.bat  setup-poppler.bat
.github/workflows/: release-windows.yml
docs/: 产品介绍.md
packaging/windows/: PDFStudio.iss  PORTABLE-README.txt  PageCase.iss  README.md  third-party-LICENSES.txt
qml/: Main.qml
qml/components/: AboutDialog.qml  ActionBar.qml  AppHeader.qml  AppLogo.qml  ChangelogDialog.qml  CompactComboBox.qml  CompressComboBox.qml  ConvertComboBox.qml  DragGrip.qml  FeatureTabs.qml  FileDropZone.qml  FileListView.qml  GlobalProgressBar.qml  IconDeleteButton.qml  MenuOption.qml  RotateComboBox.qml  ScrollPreview.qml  SettingsDropdown.qml  ShadowCard.qml  StatusToast.qml  StyledButton.qml  StyledComboBox.qml  ThemeToggleButton.qml  UpdateNewVersionLabel.qml  UpdateStatusIcon.qml  WatermarkCountCombo.qml  WatermarkInputField.qml
qml/pages/: CompressPage.qml  ConvertPage.qml  MergePage.qml  PageBase.qml  RotatePage.qml  SplitPage.qml  WatermarkPage.qml
qml/style/: Theme.qml
resources/: changelog.json  update.json
scripts/: build-release.bat  deploy.bat  env.bat  package-installer.bat  package-portable.bat  release.bat
src/: appcontroller.cpp  appcontroller.h  appsettings.cpp  appsettings.h  filelistmodel.cpp  filelistmodel.h  main.cpp  officeconverter.cpp  officetextextractor.cpp  officetextextractor.h  pdfengine.cpp  pdfengine.h  pdfpagerenderer.cpp  pdfpagerenderer.h  pdfpreviewmodel.cpp  pdfpreviewmodel.h  previewimageprovider.cpp  previewimageprovider.h  updatechecker.cpp  updatechecker.h  watermarklayout.cpp  watermarklayout.h
tools/poppler/: README.txt
tools/qpdf/: README.txt
